Update and rename index.html.All Files to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>нози хуяМи!</title>
+  <title>ц▌ц▐ц ц┴ ц┬ц∙ц▒ц╜ц┴!</title>
   <style>
     body {
       display: flex;
